# S3DL-3.0

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  generate.bat  generate_mingw.bat  vcpkg.json
assets/: no_model.fbx
assets/shaders/: frag.glsl  frag2.glsl  frameBufferFrag.glsl  frameBufferVert.glsl  realisticFrag.glsl  skyBoxFrag.glsl  skyBoxVert.glsl  vert.glsl  vert2.glsl
buildGNU/: CMakeCache.txt  Makefile  cmake_install.cmake
extermal/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/: icon.aps  icon.rc  main.cpp
src/Application/: Game.cpp  Game.h
src/Application/Console/: ChatConsole.cpp  ChatConsole.h
src/Application/EventSystem/: BasicEvent.h  EventDispatcher.cpp  EventDispatcher.h  GameStateScanner.h
src/Application/State/: State.cpp  State.h  Window.cpp  Window.h
src/Core/AssetManagers/: AssetManager.cpp  AssetManager.h  AudioBufferStorage.cpp  AudioBufferStorage.h  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp
src/Core/Audio/: Listener.cpp  Listener.h  Source.cpp  Source.h
src/Core/BasicBackend/: Camera.h  Model.h  mesh.h  shader.h  texture.h
src/Core/Manager/: AssetManager.cpp  AssetManager.h  AudioBuffeManager.cpp  AudioBufferManager.h  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/Core/MetalBackend/: Shader.h
src/Core/OpenGlBackend/: CubeMap.cpp  CubeMap.h  Fbo.cpp  Fbo.h  Model.cpp  Model.h  TextureManager.cpp  TextureManager.h  camera.cpp  camera.h  ebo.cpp  ebo.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/Game/: Game.cpp  Game.h
src/RenderPipeline/: Model.cpp  Model.h  TextureManager.cpp  TextureManager.h  camera.cpp  camera.h  ebo.cpp  ebo.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/Utils/: Timer.cpp  Timer.h  Utils.cpp  Utils.h
